# Rectbot_Noetic

./: .gitignore  frames.gv
devel/: .catkin  local_setup.sh  setup.sh
devel/include/rectbot_cv/: KeyPoint.h  KeyPoints.h  PoseObject.h  PoseObjectArray.h
devel/lib/imu_node/: imu_node
devel/lib/pkgconfig/: hardware_node.pc  imu_node.pc  rectbot_bridge.pc  rectbot_bringup.pc  rectbot_bt.pc  rectbot_cv.pc  rectbot_description.pc  rectbot_gazebo.pc  rectbot_hardware_interface.pc  rectbot_navigation.pc  rectbot_slam.pc  rectbot_sound.pc  rectbot_teleop.pc  rectbot_wing_controller.pc  roboclaw_node.pc
devel/lib/rectbot_bt/: BT_node
devel/lib/rectbot_cv/: rectbot_cv_node  rectbot_object_detection_node  rectbot_object_mapping_node
devel/lib/rectbot_hardware_interface/: rectbot_hardware_interface
devel/lib/rectbot_slam/: flat_world_imu_node
devel/share/hardware_node/cmake/: hardware_nodeConfig.cmake
devel/share/imu_node/cmake/: imu_nodeConfig.cmake
devel/share/rectbot_bridge/cmake/: rectbot_bridgeConfig.cmake
devel/share/rectbot_bringup/cmake/: rectbot_bringupConfig.cmake
devel/share/rectbot_bt/cmake/: rectbot_btConfig.cmake
devel/share/rectbot_cv/cmake/: rectbot_cv-msg-extras.cmake  rectbot_cv-msg-paths.cmake  rectbot_cvConfig.cmake
devel/share/rectbot_description/cmake/: rectbot_descriptionConfig.cmake
devel/share/rectbot_gazebo/cmake/: rectbot_gazeboConfig.cmake
devel/share/rectbot_hardware_interface/cmake/: rectbot_hardware_interfaceConfig.cmake
devel/share/rectbot_navigation/cmake/: rectbot_navigationConfig.cmake
devel/share/rectbot_slam/cmake/: rectbot_slamConfig.cmake
src/hardware_node/: CMakeLists.txt  package.xml
src/hardware_node/launch/: hardware.launch
src/hardware_node/nodes/: ina219_node  mic_array_node
src/rectbot_bridge/: CMakeLists.txt
src/rectbot_bridge/launch/: rectbot_bridge.launch
src/rectbot_bringup/: CMakeLists.txt  package.xml  rectbot-usb.rules
src/rectbot_bringup/config/: localization_odom.yaml
src/rectbot_bringup/launch/: rectbot_bringup.launch  rectbot_camera.launch  rectbot_core.launch  rectbot_explore.launch  rectbot_lidar.launch  rectbot_model.launch  rectbot_remote.launch  rectbot_robot.launch
src/rectbot_bringup/launch/includes/: description.launch.xml
src/rectbot_bringup/scripts/: create_udev_rules
src/rectbot_bt/: CMakeLists.txt  package.xml
src/rectbot_bt/bt/: rectbot_sound.xml
src/rectbot_bt/include/: ExploreActionNode.hpp  PositionProcess_node.hpp  SoundDirectProcess_node.hpp
src/rectbot_bt/src/: BT_node.cpp  ExploreActionNode.cpp  PositionProcess_node.cpp  SoundDirectProcess_node.cpp
src/rectbot_cv/: CMakeLists.txt  package.xml
src/rectbot_cv/components/ByteTrack/include/: BYTETracker.h  STrack.h  dataType.h  kalmanFilter.h  lapjv.h
src/rectbot_cv/components/ByteTrack/src/: BYTETracker.cpp  STrack.cpp  kalmanFilter.cpp  lapjv.cpp  utils.cpp
src/rectbot_cv/config/: model_params.yaml
src/rectbot_cv/include/: common.hpp  rectbot_object_detection_node.hpp  rectbot_object_mapping_node.hpp  yolov8.hpp
src/rectbot_cv/launch/: rectbot_cv.launch  rectbot_detect.launch  rectbot_map.launch
src/rectbot_cv/msg/: KeyPoint.msg  PoseObject.msg  PoseObjectArray.msg
src/rectbot_cv/src/: rectbot_object_detection_node.cpp  rectbot_object_mapping_node.cpp  yolov8.cpp
src/rectbot_description/: CMakeLists.txt  package.xml
src/rectbot_description/launch/: display.launch  gazebo.launch
src/rectbot_description/meshes/: camera_link.STL  caster_link.STL  caster_link_wrong.STL  left_wheel_link.STL  left_wing_link.STL  lidar_link.STL  right_wheel_link.STL  right_wing_link.STL
src/rectbot_description/urdf/: rectbot.csv  rectbot.gazebo.xacro  rectbot.urdf
src/rectbot_gazebo/: CMakeLists.txt  package.xml
src/rectbot_gazebo/config/: controllers.yaml
src/rectbot_gazebo/launch/: rectbot_empty_world.launch  rectbot_gazebo_rviz.launch  rectbot_house.launch  rectbot_world.launch
src/rectbot_gazebo/models/rectbot_house/: model.config  model.sdf
src/rectbot_gazebo/models/rectbot_world/: model-1_4.sdf  model.config  model.sdf
src/rectbot_gazebo/worlds/: rectbot_house.world  rectbot_world.world
src/rectbot_hardware_interface/: CMakeLists.txt  package.xml
src/rectbot_hardware_interface/config/: controllers.yaml  joint_limits.yaml
src/rectbot_hardware_interface/include/: rectbot_hardware_interface.h
src/rectbot_hardware_interface/launch/: rectbot_hw.launch
src/rectbot_hardware_interface/src/: rectbot_hardware_interface.cpp
src/rectbot_navigation/: CMakeLists.txt
src/rectbot_navigation/launch/: move_base.launch  rectbot_navigation.launch
src/rectbot_navigation/maps/: CEEC_map.pgm  CEEC_map.yaml  E12.pgm  E12.yaml  E6.yaml.pgm  E6.yaml.yaml  Home_map.pgm  Home_map.yaml  map.pgm
src/rectbot_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/rectbot_slam/: CMakeLists.txt
src/rectbot_slam/config/: rectbot_rplidar.lua
src/rectbot_slam/launch/: rectbot_cartographer.launch  rectbot_gmapping.launch  rectbot_hector.launch
src/rectbot_slam/src/: flat_world_imu_node.cpp
src/rectbot_sound/: CMakeLists.txt  package.xml
src/rectbot_sound/launch/: find_candidates.launch
src/rectbot_sound/nodes/: CostmapChecker.py  bearing_EKF_node  bearing_candidate_node  bearing_init_node  bearing_node  bearing_perp_move_node
src/rectbot_teleop/: CMakeLists.txt  package.xml  setup.py
src/rectbot_teleop/launch/: rectbot_teleop_key.launch
src/rectbot_teleop/nodes/: rectbot_teleop_key
src/rectbot_wing_controller/: CMakeLists.txt  setup.py
src/rectbot_wing_controller/launch/: rectbot_wing_controller.launch
src/rectbot_wing_controller/nodes/: nearestobstacle_laser_v1.py  rectbot_wing_auto  rectbot_wing_controller
src/roboclaw_node/: CMakeLists.txt  setup.py
src/roboclaw_node/launch/: robolaw.launch
src/roboclaw_node/nodes/: roboclaw.py  roboclaw_node  tempCodeRunnerFile.py  using_encoders_python.py
(+38 files in other folders)
