<?xml version="1.0"?>
<package format="2">
  <name>rectbot_bringup</name>
  <version>1.2.3</version>
  <description>
    roslaunch scripts for starting the rectbot
  </description>
  <license>ARAR Jsc.</license>
  <author email="duc.ta@arar.vn">Tri-Duc Ta</author>
  <maintainer email="duc.ta@arar.vn">Tri-Duc Ta</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rectbot_description</exec_depend>
  <exec_depend>rectbot_teleop</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>realsense_camera</exec_depend> 
  <exec_depend>rectbot_hardware_interface</exec_depend>
  <!-- <exec_depend>raspicam_node</exec_depend> -->
</package>
