<package format="2">
  <name>rectbot_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for rectbot</p>
  </description>
  <author>Tri-Duc Ta</author>
  <maintainer email="duc.ta@arar.vn" />
  <license>ARAR Jsc.</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <export>
    <architecture_independent />
  </export>
</package>
