<?xml version="1.0"?>
<package format="2">
  <name>rectbot_hardware_interface</name>
  <version>2.0.1</version>
  <description>RectBot controller package</description>

  <license>ARAR Jsc.</license>
  <author email="duc.ta@arar.vn">TriDuc Ta</author>
  <maintainer email="duc.ta@arar.vn">TriDuc Ta</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>boost</depend>
</package>
