<?xml version="1.0"?>
<package format="2">
  <name>rectbot_teleop</name>
  <version>0.4.0</version>

  <description>Provides teleoperation using keyboard for rectbot</description>
  <author email="duc.ta@arar.vn">Tri-Duc Ta</author>

  <maintainer email="duc.ta@arar.vn">Tri-Duc Ta</maintainer>

  <license>ARAR Jsc.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
